--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 # Python dependencies for FitIntel
-Flask
-numpy
-pandas
-scikit-learn
-joblib
+Flask==2.3.3
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+joblib==1.3.2
+gunicorn==21.2.0
+Werkzeug==2.3.7
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+itsdangerous==2.1.2
+click==8.1.7
