--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 itsdangerous==2.1.2
 click==8.1.7
+flask-bcrypt==1.0.1
+flask-sqlalchemy==3.0.5
+psycopg2-binary==2.9.7
