--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Python dependencies for FitIntel
 Flask==2.3.3
-numpy==1.24.3
+numpy==1.25.2
 pandas==2.0.3
 scikit-learn==1.3.0
 joblib==1.3.2
@@ -13,3 +13,4 @@ click==8.1.7
 flask-bcrypt==1.0.1
 flask-sqlalchemy==3.0.5
 psycopg2-binary==2.9.7
+setuptools==68.2.2
