--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 models/*.pkl filter=lfs diff=lfs merge=lfs -text
+models_compressed/*.pkl filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
